# cmspw

./: .coveragerc  .pre-commit-config.yaml  README.md  README.rst  cmspw.py  euapw.py  pyproject.toml  pytest.ini  setup.cfg  test_functions.py
.circleci/: config.yml
.github/workflows/: validate.yml
cmspw/: __main__.py  kbmap.json
cmspw/data/: kbmap.py
tests/: test_argparse.py
tests/test_cloudvpn/: test_cloudvpn.py
tests/test_eua/: test_eua.py
