[tool.poetry]
name = "euapw"
version = "0.1.0"
description = "generates passwords for CMS Enterprise User Authentication (EUA)"
authors = ["Ryan Delaney <ryan@truss.works>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"

[tool.black]
line-length = 79
target_version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
