[tool.poetry]
name = "cmspw"
version = "1.0.0"
description = "generates passwords for CMS"
authors = ["Ryan Delaney <ryan@truss.works>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
mock = "^4.0.2"

[tool.poetry.scripts]
cmspw = 'cmspw.__main__:main'

[tool.black]
line-length = 79
target_version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
